* Feb 7 2001 hship

Add some logging to AssetExternalizer.
Have RequestContext emit ServletContext init parameters inside write().
Fix a bug that prevented asset externalization from working (got the URL
from a servlet init param, not the servlet context).
Explicitly set the width and height of the tabs on the Inspector page.
Remove indentation support from IResponseWriter and implementations.
Add the Block and InsertBlock components.

* Feb 6 2001 hship

Add missing method getMaximumLengthBinding to TextField.

* Feb 6 2001 hship

Don't create new page recorder instances until actually needed.
Actually invoke the ILifeCycle finishLoad() method.
Allow informal parameters for the validating text field components (but apply them
to the underlying TextField).

* Jan 26 2001 hship

Remove IRequestCycle from the parameter list for RequestCycleException and all sub-exceptions.
Vastly improve the Script component and related classes.

* Jan 26 2001 hship

Revisit links and event handlers ... again!  ServiceLinks now support
a well-defined set of events, but can handle any number of JavaScript
functions.
Add some more documentation to the DTDs.
Rename IBinding.getValue() to getObject().
Rename IBinding.setValue() to setObject().
Add IBinding.getObject(String,Class).

* Jan 25 2001 hship

Get log4j javadoc from jakarta.apache.org.

* Jan 25 2001 hship

Pool PageLoaders.
Fix some latent threading bugs in PropertyAccessor and PageSource.
Add a sanity check to AbstractPage.attach().
Change AbstractApplication to log uncaught exceptions (in addition to raising the exception page).


* Jan 19 2001 hship

Change some method signatures in IEngine and AbstractEngine such that engine has
access to the IRequestCycle when it creates a visit object.

* Jan 18 2001 hship

Make the session ID the NDC (nested diagnostic context, used with log4j).

* Jan 17 2001 hship

Tiny efficiency improvement in Enum serialization.

* Jan 16 2001 hship
