@@ -174,7 +174,7 @@
 			<bindings>
 				<binding>
 					<name>delegate</name>
-					<property-path>insertRequestDelegate</property-path>
+					<property-path>page.requestCycle.requestContext</property-path>
 				</binding>
 			</bindings>
 		</component>
